--- a/src/Routes/RoomBorad/Side/Channel.css
+++ b/src/Routes/RoomBorad/Side/Channel.css
@@ -65,6 +65,7 @@
 .message-form-nav {
   width: 100%;
   height: 30px;
+  background-color: gray;
   border: 1px solid gray;
 }
 .message-form-text {
