--- a/src/style/localStyle.css
+++ b/src/style/localStyle.css
@@ -1,8 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
 .set {
   font-family: "Josefin Sans", cursive;
 }
 .basic {
   font-family: "Rubik", sans-serif;
+}
+.korean {
+  font-family: "Noto Sans KR", sans-serif;
 }
